--- a/vertx-gaia/vertx-tp/pom.xml
+++ b/vertx-gaia/vertx-tp/pom.xml
@@ -44,6 +44,10 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-auth-jwt</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-auth-oauth2</artifactId>
+        </dependency>
         <!-- Jooq -->
         <dependency>
             <groupId>org.jooq</groupId>
