--- a/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
+++ b/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
@@ -75,6 +75,7 @@ E40051: "Your RoutingContext object reference is null, could not be getNull by g
 E40052: "You defined @WebFilter \"{0}\", but it does not implement interface \"io.vertx.up.uca.web.filter\"."
 E40053: "The order of @WebFilter must be greater than or equal 0 ( >= 0 ), but now \"{0}\" @Ordered value is negative number."
 E40054: "The @WebFilter \"{0}\"could not be initialized, please check your class."
+E40055: "(Jooq) The analyzed field of original \"{0}\" field is null, it means that the field is invalid"
 E40056: "(Database) Data pool initialized met issue, jdbcUrl = {0}, exception = {1}"
 E40057: "(Jooq) The method \"copyEntity(T target,T updated)\" require second argument updated must not be null. Class = {0}, Data = {1}"
 E40058: "(Jooq) The mode required is {0}, but current filters are \"{1}\", they are conflict"
@@ -87,7 +88,16 @@ E40064: "(Act) Act specification is invalid, you could not call this api when is
 E40065: "(Jooq) Jooq database configuration pool key = `provider` missing, it's required when you enable Jooq"
 E40066: "(Jooq) The input `clazz` is not implemented from VertxDAO, clazz is invalid: {0}"
 E40067: "(Jooq) There is no `Clause` for field = \"{0}\" and type = \"{1}\", original field = \"{2}\""
-E40055: "(Jooq) The analyzed field of original \"{0}\" field is null, it means that the field is invalid"
+E40068: "(411) - When you upload file, the `Content-Length` must be matched, but current is {0}"
+E40069: "(415) - The declared type {0} is not match to MIME {1}"
+
+# Console exception
+E40070: "The default launcher key mustn''t be overwrite. ( config )"
+E40071: "The input commands are invalid, command = \"{0}\", details = \"{1}\""
+E40072: "The command line of input arguments is empty or null, please input again"
+E40073: "Input command \"{0}\" could not be recognised in your definition"
+E40074: "The command `{0}` plugin is null or could not be found, please check your configuration"
+E40075: "The wall type is invalid `{0}` in `{1}`, please use `extension` instead when you want to define"
 
 # RxJava
 E45001: (V) - The field "{1}" of json array "{0}" must be mapped to unique element, but current reduced is "{2}"
@@ -150,15 +160,7 @@ E60045: "(400) - Your request missed `sigma` field, it means that your request h
 E60046: "(500) - Could not build valid `URL` for http request, please check your data: integration-request = {0}, data = {1} "
 E60047: "(501) - Sorry, the client that your bind is `null`, could not continue this operation"
 E60048: "(415) The argument type of @PointParam is invalid, valid is ( List<T>, JsonArray, VPosition ), current is \"{0}\""
-E40068: "(411) - When you upload file, the `Content-Length` must be matched, but current is {0}"
-E40069: "(415) - The declared type {0} is not match to MIME {1}"
 
-# Console exception
-E40070: "The default launcher key mustn''t be overwrite. ( config )"
-E40071: "The input commands are invalid, command = \"{0}\", details = \"{1}\""
-E40072: "The command line of input arguments is empty or null, please input again"
-E40073: "Input command \"{0}\" could not be recognised in your definition"
-E40074: "The command `{0}` plugin is null or could not be found, please check your configuration"
 
 # CRUD Module
 E80100: "(404) - (CRUD) You missed `module` = `{0}` definition in file \"plugin/crud/module/\" folder"
