--- a/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
+++ b/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
@@ -98,6 +98,8 @@ E40072: "The command line of input arguments is empty or null, please input agai
 E40073: "Input command \"{0}\" could not be recognised in your definition"
 E40074: "The command `{0}` plugin is null or could not be found, please check your configuration"
 E40075: "The wall type is invalid `{0}` in `{1}`, please use `extension` instead when you want to define"
+E40076: "You have selected the wall `{0}`, the expected size should `{1}`."
+E40077: "The provider {0} is conflict because it''s invalid AuthenticateProvider."
 
 # RxJava
 E45001: (V) - The field "{1}" of json array "{0}" must be mapped to unique element, but current reduced is "{2}"
