--- a/vertx-ifx/zero-ifx-auth/pom.xml
+++ b/vertx-ifx/zero-ifx-auth/pom.xml
@@ -27,5 +27,10 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-auth-webauthn</artifactId>
         </dependency>
+        <!-- Digest -->
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-auth-htdigest</artifactId>
+        </dependency>
     </dependencies>
 </project>
