--- a/vertx-pin/zero-rbac/pom.xml
+++ b/vertx-pin/zero-rbac/pom.xml
@@ -17,6 +17,17 @@
             <groupId>cn.vertxup</groupId>
             <artifactId>zero-ke</artifactId>
         </dependency>
+        <!-- Authorization -->
+        <dependency>
+            <groupId>cn.vertxup</groupId>
+            <artifactId>zero-ifx-auth</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.vertxup</groupId>
+            <artifactId>zero-ifx-auth</artifactId>
+            <version>0.7.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
