--- a/vertx-istio/pom.xml
+++ b/vertx-istio/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>vertx-zero</artifactId>
         <groupId>cn.vertxup</groupId>
-        <version>0.7.0-SNAPSHOT</version>
+        <version>0.7.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <name>「vertx-istio」Zero Micro</name>
     <modules>
+        <module>zero-iproxy</module>
     </modules>
     <build>
         <plugins>
