--- a/vertx-pin/zero-rbac/pom.xml
+++ b/vertx-pin/zero-rbac/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>vertx-pin</artifactId>
         <groupId>cn.vertxup</groupId>
-        <version>0.7.0</version>
+        <version>0.8.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>cn.vertxup</groupId>
             <artifactId>zero-ifx-auth</artifactId>
-            <version>0.7.0</version>
+            <version>0.8.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
