--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,8 @@
         <rxjava2.version>2.2.21</rxjava2.version>
         <netty.tcnative.version>2.0.44.Final</netty.tcnative.version>
         <netty.version>4.1.69.Final</netty.version>
+        <!-- Upload Issue -->
+        <netty.codec.version>4.1.68.Final</netty.codec.version>
         <hazelcast.version>5.0</hazelcast.version>
         <swagger.version>1.6.0</swagger.version>
         <error.prone.version>2.9.0</error.prone.version>
@@ -1349,7 +1351,7 @@
             <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-codec-http</artifactId>
-                <version>${netty.version}</version>
+                <version>${netty.codec.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.netty</groupId>
