--- a/vertx-pin/zero-ambient/src/main/resources/plugin/sql/ambient.yml
+++ b/vertx-pin/zero-ambient/src/main/resources/plugin/sql/ambient.yml
@@ -36,3 +36,9 @@ databaseChangeLog:
   - include:
       file: plugin/sql/ambient/X_ACTIVITY_CHANGE.sql
       relativeToChangelogFile: false
+  - include:
+      file: plugin/sql/ambient/X_EMAIL_SERVER.sql
+      relativeToChangelogFile: false
+  - include:
+      file: plugin/sql/ambient/X_NOTIFICATION.sql
+      relativeToChangelogFile: false
