--- a/vertx-pin/zero-fm/src/main/resources/plugin/sql/fm.yml
+++ b/vertx-pin/zero-fm/src/main/resources/plugin/sql/fm.yml
@@ -49,3 +49,10 @@ databaseChangeLog:
   - include:
       file: plugin/sql/fm/F_PAYMENT.sql
       relativeToChangelogFile: false
+  # 银行/币种
+  - include:
+      file: plugin/sql/fm/F_BANK.sql
+      relativeToChangelogFile: false
+  - include:
+      file: plugin/sql/fm/F_CURRENCY.sql
+      relativeToChangelogFile: false
