--- a/vertx-pin/zero-erp/src/main/resources/plugin/sql/erp.yml
+++ b/vertx-pin/zero-erp/src/main/resources/plugin/sql/erp.yml
@@ -27,10 +27,16 @@ databaseChangeLog:
     -   include:
             file: plugin/sql/erp/E_JOB_LOG.sql
             relativeToChangelogFile: false
+    -   include:
+            file: plugin/sql/erp/E_ASSET.sql
+            relativeToChangelogFile: false
     # 关联关系
     -   include:
             file: plugin/sql/erp/R_COMPANY_CUSTOMER.sql
             relativeToChangelogFile: false
     -   include:
             file: plugin/sql/erp/R_TEAM_EMPLOYEE.sql
+            relativeToChangelogFile: false
+    -   include:
+            file: plugin/sql/erp/R_ASSET_SHARE.sql
             relativeToChangelogFile: false
