--- a/vertx-pin/zero-ambient/src/main/resources/plugin/sql/ambient.yml
+++ b/vertx-pin/zero-ambient/src/main/resources/plugin/sql/ambient.yml
@@ -42,3 +42,6 @@ databaseChangeLog:
   - include:
       file: plugin/sql/ambient/X_NOTIFICATION.sql
       relativeToChangelogFile: false
+  - include:
+      file: plugin/sql/ambient/X_INTEGRATION.sql
+      relativeToChangelogFile: false
