--- a/vertx-pin/zero-rbac/src/main/resources/plugin/rbac/oob/initialize.yml
+++ b/vertx-pin/zero-rbac/src/main/resources/plugin/rbac/oob/initialize.yml
@@ -1,94 +1,89 @@
-# -------------- Security 部分 ----------------
-# User Configuration
--   dao: cn.vertxup.rbac.domain.tables.daos.SUserDao
+-   dao: cn.vertxup.rbac.domain.tables.daos.SUserDao  # S_USER
     key: key
     unique:
-      - username
-      - sigma
-# OAuth User
--   dao: cn.vertxup.rbac.domain.tables.daos.OUserDao
+    - username
+    - sigma
+-   dao: cn.vertxup.rbac.domain.tables.daos.OUserDao  # O_USER
     key: key
     unique:
-      - clientId
-# Role Configuration
--   dao: cn.vertxup.rbac.domain.tables.daos.SRoleDao
+    - clientId
+-   dao: cn.vertxup.rbac.domain.tables.daos.SRoleDao  # S_ROLE
     key: key
     unique:
-      - code
-      - sigma
-# Relation:  Role - User
+    - code
+    - sigma
 -   dao: cn.vertxup.rbac.domain.tables.daos.RUserRoleDao
     unique:
-      - userId
-      - roleId
+    - userId
+    - roleId
 # Group Configuration
 -   dao: cn.vertxup.rbac.domain.tables.daos.SGroupDao
     key: key
     unique:
-      - code
-      - sigma
+    - code
+    - sigma
 # Relation:  Role - Group
 -   dao: cn.vertxup.rbac.domain.tables.daos.RGroupRoleDao
     unique:
-      - groupId
-      - roleId
+    - groupId
+    - roleId
 # Relation:  User - Group
 -   dao: cn.vertxup.rbac.domain.tables.daos.RUserGroupDao
     unique:
-      - groupId
-      - userId
+    - groupId
+    - userId
 # Permission Configuration
 -   dao: cn.vertxup.rbac.domain.tables.daos.SPermissionDao
     key: key
     unique:
-      - code
-      - sigma
+    - code
+    - sigma
 # Permission Set Configuration
 -   dao: cn.vertxup.rbac.domain.tables.daos.SPermSetDao
     key: key
     unique:
-      - name
-      - code
-      - sigma
+    - name
+    - code
+    - sigma
 # Relation:  Role - Permission
 -   dao: cn.vertxup.rbac.domain.tables.daos.RRolePermDao
     unique:
-      - roleId
-      - permId
+    - roleId
+    - permId
 # Resource Configuration
 -   dao: cn.vertxup.rbac.domain.tables.daos.SResourceDao
     key: key
     unique:
-      - code
-      - sigma
+    - code
+    - sigma
 # Action Configuration
 -   dao: cn.vertxup.rbac.domain.tables.daos.SActionDao
     key: key
     unique:
-      - code
-      - sigma
+    - code
+    - sigma
 # View Configuration
 -   dao: cn.vertxup.rbac.domain.tables.daos.SViewDao
     key: key
     unique:
-      - name
-      - owner
-      - ownerType
-      - resourceId
+    - name
+    - owner
+    - ownerType
+    - resourceId
 -   dao: cn.vertxup.rbac.domain.tables.daos.SVisitantDao
     key: key
     unique:
-      - code
-      - sigma
+    - code
+    - sigma
 # Path/Packet Rule Configuration
 -   dao: cn.vertxup.rbac.domain.tables.daos.SPathDao
     key: key
     unique:
-      - code
-      - sigma
+    - code
+    - sigma
 -   dao: cn.vertxup.rbac.domain.tables.daos.SPacketDao
     key: key
     unique:
-      - pathId
-      - resourceId
-      - sigma
+    - pathId
+    - resourceId
+    - sigma
