--- a/vertx-pin/zero-wf/src/main/resources/plugin/sql/wf.yml
+++ b/vertx-pin/zero-wf/src/main/resources/plugin/sql/wf.yml
@@ -2,3 +2,9 @@ databaseChangeLog:
   - include:
       file: plugin/sql/wf/W_INSTANCE.sql
       relativeToChangelogFile: false
+  - include:
+      file: plugin/sql/wf/W_FLOW.sql
+      relativeToChangelogFile: false
+  - include:
+      file: plugin/sql/wf/W_TODO.sql
+      relativeToChangelogFile: false
