--- a/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
+++ b/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
@@ -266,8 +266,11 @@ E80539: "(501) - (Web) Current `DictFabric` is null, but it''s required"
 E80540: "(501) - (Web) The model of `DataTpl` is null and could not be found in your environment, Anonymous error"
 E80541: "(409) - (Ref) The model `{0}` defined static references, but found more than one dao in field `{1}`, please check \"sourceReference\" configuration."
 E80544: "(500) - (Ref) Please bind `DataAtom` first and then you can call `bind(Model)` method for this current model ( identifier = `{0}` ). "
-E80545: "(400) - (Mod) Because both new and old record(s) are null/empty, could not be valid to generate history."
-E80546: "(500) - (Excel) Read the excel file met null file issue, please check your code."
+E80545: "(400) - (Mod) Because both new and old record(s) are null/empty, could not be valid to generate history"
+E80546: "(500) - (Excel) Read the excel file met null file issue, please check your code"
+
+# Workflow Module
+E80600: "(404) - (Workflow) The system could not find the ProcessDefinition by code = `{0}`"
 # Extension Vie Platform
 E81000: "(400) - (Vie) Current environment `{0}` is not supported, please provide new one."
 E81001: "(501) - (Vie) Sorry the command of development could not be used on production environment."
