--- a/vertx-pin/zero-wf/pom.xml
+++ b/vertx-pin/zero-wf/pom.xml
@@ -28,6 +28,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.uuid</groupId>
+            <artifactId>java-uuid-generator</artifactId>
+        </dependency>
         <!-- Kern -->
         <dependency>
             <groupId>cn.vertxup</groupId>
