--- a/vertx-pin/zero-fm/src/main/resources/plugin/fm/oob/initialize.yml
+++ b/vertx-pin/zero-fm/src/main/resources/plugin/fm/oob/initialize.yml
@@ -6,3 +6,11 @@
     key: key
     unique:
     - code
+-   dao: cn.vertxup.fm.domain.tables.daos.FBankDao
+    key: key
+    unique:
+    - code
+-   dao: cn.vertxup.fm.domain.tables.daos.FCurrencyDao
+    key: key
+    unique:
+    - code
