New Database Table

--- a/vertx-pin/zero-ambient/src/main/resources/plugin/ambient/oob/initialize.yml
+++ b/vertx-pin/zero-ambient/src/main/resources/plugin/ambient/oob/initialize.yml
@@ -33,3 +33,11 @@
     - code
     - type
     - appId
+-   dao: cn.vertxup.ambient.domain.tables.daos.XMenuMyDao     # X_MENU_MY
+    key: key
+    unique:
+    - owner
+    - type
+    - page
+    - position
+    - uiMenu
