--- a/vertx-pin/zero-ambient/src/main/resources/plugin/sql/database.yml
+++ b/vertx-pin/zero-ambient/src/main/resources/plugin/sql/database.yml
@@ -22,6 +22,9 @@ databaseChangeLog:
       file: plugin/sql/ambient/X_MENU.sql
       relativeToChangelogFile: false
   - include:
+      file: plugin/sql/ambient/X_MENU_MY.sql
+      relativeToChangelogFile: false
+  - include:
       file: plugin/sql/ambient/X_NUMBER.sql
       relativeToChangelogFile: false
   - include:
