--- a/vertx-pin/zero-psi/src/main/resources/plugin/psi/oob/initialize.yml
+++ b/vertx-pin/zero-psi/src/main/resources/plugin/psi/oob/initialize.yml
@@ -2,7 +2,10 @@
     key: key
     unique:
     - code
+    - sigma
 -   dao: cn.vertxup.psi.domain.tables.daos.PPosDao   # P_POS
     key: key
     unique:
     - code
+    - whId
+    - sigma
