--- a/pom.xml
+++ b/pom.xml
@@ -133,14 +133,14 @@
 
         <!-- Rpc -->
         <vertx.grpc.version>1.6.1</vertx.grpc.version>
-        <grpc.version>1.42.1</grpc.version>
+        <grpc.version>1.43.0</grpc.version>
         <protobuf.version>3.19.1</protobuf.version>
         <annotation.api.version>6.0.53</annotation.api.version>
         <gson.version>2.8.9</gson.version>
         <picoli.version>4.6.2</picoli.version>
 
         <!-- Yaml -->
-        <yaml.version>1.29</yaml.version>
+        <yaml.version>1.30</yaml.version>
         <hdr.version>2.1.12</hdr.version>
 
         <!-- Vert.x Addition -->
@@ -592,7 +592,7 @@
             <dependency>
                 <groupId>io.vertx</groupId>
                 <artifactId>vertx-auth-webauthn</artifactId>
-                <version>${vertx.version}</version>
+                <version>${vertx.version}.1</version>
                 <exclusions>
                     <exclusion>
                         <groupId>io.vertx</groupId>
