--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,8 @@
         <encoding>UTF-8</encoding>
 
         <!-- Vertx Framework Version -->
-        <vertx.version>4.2.2</vertx.version>
-        <stack.version>4.2.2</stack.version>
+        <vertx.version>4.2.3</vertx.version>
+        <stack.version>4.2.3</stack.version>
 
         <jcabi.version>0.23.2</jcabi.version>
         <jersey.version>2.35</jersey.version>
@@ -102,7 +102,7 @@
         <joda.version>2.10.13</joda.version>
         <codehaus.janino.version>3.1.6</codehaus.janino.version>
         <codehaus.mojo.version>1.20</codehaus.mojo.version>
-        <ignite.version>2.11.0</ignite.version>
+        <ignite.version>2.11.1</ignite.version>
         <mongodb.async.version>3.12.10</mongodb.async.version>
         <poi.version>4.1.2</poi.version>
         <jedis.version>4.0.0</jedis.version>
@@ -133,7 +133,7 @@
 
         <!-- Rpc -->
         <vertx.grpc.version>1.6.1</vertx.grpc.version>
-        <grpc.version>1.43.0</grpc.version>
+        <grpc.version>1.43.1</grpc.version>
         <protobuf.version>3.19.1</protobuf.version>
         <annotation.api.version>6.0.53</annotation.api.version>
         <gson.version>2.8.9</gson.version>
@@ -148,7 +148,7 @@
         <netty.tcnative.version>2.0.46.Final</netty.tcnative.version>
         <netty.version>4.1.72.Final</netty.version>
         <!-- Upload Issue -->
-        <hazelcast.version>5.0.1</hazelcast.version>
+        <hazelcast.version>5.0.2</hazelcast.version>
         <swagger.version>1.6.0</swagger.version>
         <error.prone.version>2.10.0</error.prone.version>
         <reactive.streams.version>1.0.3</reactive.streams.version>
@@ -592,7 +592,7 @@
             <dependency>
                 <groupId>io.vertx</groupId>
                 <artifactId>vertx-auth-webauthn</artifactId>
-                <version>${vertx.version}.1</version>
+                <version>${vertx.version}</version>
                 <exclusions>
                     <exclusion>
                         <groupId>io.vertx</groupId>
