--- a/vertx-pin/zero-wf/src/main/resources/plugin/sql/wf.yml
+++ b/vertx-pin/zero-wf/src/main/resources/plugin/sql/wf.yml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: plugin/sql/wf/W_TODO.sql
       relativeToChangelogFile: false
+  - include:
+      file: plugin/sql/wf/W_TICKET.sql
+      relativeToChangelogFile: false
