added serial and initial data of virtual account book

--- a/vertx-pin/zero-fm/src/main/resources/plugin/fm/oob/initialize.yml
+++ b/vertx-pin/zero-fm/src/main/resources/plugin/fm/oob/initialize.yml
@@ -14,3 +14,7 @@
     key: key
     unique:
     - code
+-   dao: cn.vertxup.fm.domain.tables.daos.FBookDao
+    key: key
+    unique:
+        - code
