--- a/vertx-pin/zero-vista/pom.xml
+++ b/vertx-pin/zero-vista/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <artifactId>zero-vista</artifactId>
-    <name>Scaffold Extension「zero-vista」</name>
+    <name>「zero-vista」Scaffold Extension</name>
     <modules>
         <module>infix-mysql</module>
         <module>infix-oracle</module>
