--- a/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
+++ b/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
@@ -190,6 +190,7 @@ E80213: "(403) - (RBAC) Sorry, you have no access to visit the resource that you
 E80215: "(500) - (RBAC) Dwarf instance is null when analyzed result type = {0}"
 E80220: "(401) - (RBAC) The user `{0}` that you have provided is locked, please contact administrator"
 E80221: "(401) - (RBAC) Your wrong password typing exceed `{0}` times, please wait around `{1}` mins and try again"
+E80222: "(401) - (RBAC) Image code ( {0} ) that you provided is wrong"
 
 # Kernel Module
 E80214: "(409) - (Ke) Zero system could not identify the session you provided `{0}`, maybe it''s expired or destroyed"
